<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TasksFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.projectdb.TasksViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/taskPrompt"
            android:text="@={viewModel.newTaskName}"
            android:maxLength="30" />
        <EditText
            android:id="@+id/task_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/taskDesc"
            android:text="@={viewModel.newTaskDesc}"
            android:maxLength="250"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="11dp"
                    android:background="@color/lightBrown"
                    android:padding="10dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/filter"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="12dp"
                    android:background="@color/lightBrown"
                    android:padding="10dp"
                    android:text="@string/filter"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/show_tasks"
                    app:layout_constraintStart_toEndOf="@+id/save_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/show_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@color/lightBrown"
                    android:padding="10dp"
                    android:text="@string/view"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/filter"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </LinearLayout>
    </ScrollView>
</layout>